# kajiya_chess

./: .gitignore  2gltf2.py  Cargo.toml  bake.py  imgui.ini
assets/meshes/chess_board/: scene.gltf
assets/meshes/tri/: scene3.gltf  tri_maker.ipynb
assets/scad/: generate_gltf_chess_peices.py  scad2gltf.ipynb
assets/scad/scad_files/: chess_bishop.scad  chess_king.scad  chess_knight.scad  chess_pawn.scad  chess_queen.scad  chess_rook.scad
src/: main.rs
