[package]
name = "kajiya_chess"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kajiya = { path = "../kajiya/crates/lib/kajiya" }
kajiya-simple = { path = "../kajiya/crates/lib/kajiya-simple", features = ["dear-imgui"] }

anyhow = "1.0"
dolly = "0.1.3"
imgui = "0.7"
ron = "0.6.2"
serde = { version = "1.0", features = ["derive"] }
structopt = "0.3"

[patch.crates-io]
# Official ray-tracing extensions
rspirv = { git = "https://github.com/gfx-rs/rspirv.git", rev = "dae552c" }
spirv_headers = { git = "https://github.com/gfx-rs/rspirv.git", rev = "dae552c" }